--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.20",
     "@reduxjs/toolkit": "^2.2.5",
+    "antd": "^5.18.3",
     "axios": "^1.7.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -22,7 +23,8 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "sass": "^1.77.6",
-    "serve": "^14.2.0"
+    "serve": "^14.2.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
