--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.45.0",
@@ -39,6 +39,7 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.3",
     "vite": "^4.4.5",
     "webpack-cli": "^5.1.4"
   },
