moved the hidden files and folders as well

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,10 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "16"
+          node-version: "20"
+
+      - name: Change to client directory
+        run: cd client
 
       - name: Install dependencies
         run: yarn install
@@ -42,6 +45,9 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "20"
+
+      - name: Change to client directory
+        run: cd client
 
       - name: Install dependencies
         run: yarn install
