--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.5",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.45.3",
     "antd": "^5.18.3",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
